force-app/main/default/objects/Prior_School__c.object
<CustomObject>
    <description>The Prior School object stores data about prior schools attended by the student. Program Enrollment has a one-to-many relationship with Immunization Record. Prior School records will not be present for students enrolling in school for the first time.</description>
    <fields>
        <fullName>Attended_other_school_since_withdrawing__c</fullName>
        <label>Attended other school since withdrawing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>City</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Student_Started_Recent_School__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Student Started Recent School</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Student_Withdrew_Recent_School__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Student Withdrew Recent School</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Withdrawn_Prior_School__c</fullName>
        <description>Date Withdrawn Prior School</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Withdrawn Prior School</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DistrictCode__c</fullName>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>DistrictCode</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <description>School District</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>District</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enrolled_Prior_School__c</fullName>
        <description>Timeframe student was enrolled</description>
        <label>Enrolled Prior School</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Beginning of the year</fullName>
                </value>
                <value>
                    <fullName>End of year</fullName>
                </value>
                <value>
                    <fullName>Mid-year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EnrollmentStatus__c</fullName>
        <label>Enrollment Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Completed the school year</fullName>
                </value>
                <value>
                    <fullName>Still enrolled</fullName>
                </value>
                <value>
                    <fullName>Withdrew from the school before the end of the school year</fullName>
                </value>
                <value>
                    <fullName>Enrolled</fullName>
                    <isActive>false</isActive>
                    <label>Enrolled</label>
                </value>
                <value>
                    <fullName>Withdrawn beginning of the year</fullName>
                    <isActive>false</isActive>
                    <label>Withdrawn beginning of the year</label>
                </value>
                <value>
                    <fullName>Withdrawn end of year</fullName>
                    <isActive>false</isActive>
                    <label>Withdrawn end of year</label>
                </value>
                <value>
                    <fullName>Withdrawn mid-year</fullName>
                    <isActive>false</isActive>
                    <label>Withdrawn mid-year</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <description>School fax</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Has_Academic_Doc__c</fullName>
        <description>This is to support new question under &quot;Schooling Information&quot;</description>
        <label>Has Academic Doc</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HomeschoolDescription__c</fullName>
        <description>What best describes the type of homeschooling in which your student participated</description>
        <label>Homeschool Description</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Family-based homeschool with curriculum selected and delivered by the parent</fullName>
                </value>
                <value>
                    <fullName>Family participates in a homeschooling association with other homeschooled families</fullName>
                </value>
                <value>
                    <fullName>Online homeschooling with access to curriculum and teachers</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HomeschoolRC__c</fullName>
        <description>Does your student’s online homeschool program provide report cards, progress reports, or transcripts</description>
        <label>Homeschool RC</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MonthStarted__c</fullName>
        <label>Month Started</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Months</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>MonthWithdrew__c</fullName>
        <label>Month Withdrew</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Months</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Most_Recent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Most Recent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OnlySchoolAttended__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Only School Attended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <description>A number assigned to each record to order the schools from most recently attended to least.</description>
        <label>Order</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>School or association phone number</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Program_Enrollment__c</fullName>
        <label>Program Enrollment</label>
        <referenceTo>hed__Program_Enrollment__c</referenceTo>
        <relationshipLabel>Prior Schools</relationshipLabel>
        <relationshipName>Prior_Schools</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Question_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question Group</label>
        <referenceTo>Enrollment_Component__c</referenceTo>
        <relationshipLabel>Prior Schools</relationshipLabel>
        <relationshipName>Prior_Schools</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SameSchoolForPriorYear__c</fullName>
        <description>Is this the same school your student attended for the entire 2016-2017 school year</description>
        <label>Same School For Prior Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Same_School_For_Prior_Year__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this the same school your student attended for the entire 2016-2017 school year</description>
        <label>Same School For Prior Year</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SchoolCode__c</fullName>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>SchoolCode</label>
        <length>175</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SchoolName__c</fullName>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>SchoolName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SchoolType__c</fullName>
        <description>Type Of Prior School (12-13)</description>
        <label>SchoolType</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Homeschool</fullName>
                </value>
                <value>
                    <fullName>Charter School (Public)</fullName>
                </value>
                <value>
                    <fullName>Online (Virtual) Public School</fullName>
                </value>
                <value>
                    <fullName>Private/Parochial School</fullName>
                </value>
                <value>
                    <fullName>Public School</fullName>
                </value>
                <value>
                    <fullName>Virtual School (Public)</fullName>
                </value>
                <value>
                    <fullName>BIE School / Federal Grant / BIE Contract</fullName>
                </value>
                <value>
                    <fullName>State Supported</fullName>
                </value>
                <value>
                    <fullName>Correctional Facility</fullName>
                    <isActive>false</isActive>
                    <label>Correctional Facility</label>
                </value>
                <value>
                    <fullName>Out of school more than 1 year</fullName>
                    <isActive>false</isActive>
                    <label>Out of school more than 1 year</label>
                </value>
                <value>
                    <fullName>Out of state</fullName>
                    <isActive>false</isActive>
                    <label>Out of state</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>School_Year__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>School Year</label>
        <referenceTo>School_Year__c</referenceTo>
        <relationshipLabel>Prior Schools</relationshipLabel>
        <relationshipName>Prior_Schools</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>State in which the school or association operates</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <description>School street address</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>Street Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_Act_Status__c</fullName>
        <description>Program Enrollment record status</description>
        <formula>ISPICKVAL( Program_Enrollment__r.Status__c, &apos;In Progress&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student Act Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>V2_External_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>V2 External ID</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Validated_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Validated Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>YearStarted__c</fullName>
        <label>Year Started</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Prior to 1996</fullName>
                </value>
                <value>
                    <fullName>1996</fullName>
                </value>
                <value>
                    <fullName>1997</fullName>
                </value>
                <value>
                    <fullName>1998</fullName>
                </value>
                <value>
                    <fullName>1999</fullName>
                </value>
                <value>
                    <fullName>2000</fullName>
                </value>
                <value>
                    <fullName>2001</fullName>
                </value>
                <value>
                    <fullName>2002</fullName>
                </value>
                <value>
                    <fullName>2003</fullName>
                </value>
                <value>
                    <fullName>2004</fullName>
                </value>
                <value>
                    <fullName>2005</fullName>
                </value>
                <value>
                    <fullName>2006</fullName>
                </value>
                <value>
                    <fullName>2007</fullName>
                </value>
                <value>
                    <fullName>2008</fullName>
                </value>
                <value>
                    <fullName>2009</fullName>
                </value>
                <value>
                    <fullName>2010</fullName>
                </value>
                <value>
                    <fullName>2011</fullName>
                </value>
                <value>
                    <fullName>2012</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
                <value>
                    <fullName>2022</fullName>
                </value>
                <value>
                    <fullName>2023</fullName>
                </value>
                <value>
                    <fullName>2024</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>YearWithdrew__c</fullName>
        <label>Year Withdrew</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Prior to 1996</fullName>
                </value>
                <value>
                    <fullName>1996</fullName>
                </value>
                <value>
                    <fullName>1997</fullName>
                </value>
                <value>
                    <fullName>1998</fullName>
                </value>
                <value>
                    <fullName>1999</fullName>
                </value>
                <value>
                    <fullName>2000</fullName>
                </value>
                <value>
                    <fullName>2001</fullName>
                </value>
                <value>
                    <fullName>2002</fullName>
                </value>
                <value>
                    <fullName>2003</fullName>
                </value>
                <value>
                    <fullName>2004</fullName>
                </value>
                <value>
                    <fullName>2005</fullName>
                </value>
                <value>
                    <fullName>2006</fullName>
                </value>
                <value>
                    <fullName>2007</fullName>
                </value>
                <value>
                    <fullName>2008</fullName>
                </value>
                <value>
                    <fullName>2009</fullName>
                </value>
                <value>
                    <fullName>2010</fullName>
                </value>
                <value>
                    <fullName>2011</fullName>
                </value>
                <value>
                    <fullName>2012</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
                <value>
                    <fullName>2022</fullName>
                </value>
                <value>
                    <fullName>2023</fullName>
                </value>
                <value>
                    <fullName>2024</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ZIP__c</fullName>
        <description>ZIP Code</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>ZIP</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>test01192021__c</fullName>
        <description>for POC</description>
        <label>test01192021</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>testpicklist01192021__c</fullName>
        <label>testpicklist01192021</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Prior School</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SchoolName__c</columns>
        <columns>SchoolType__c</columns>
        <columns>School_Year__c</columns>
        <columns>District__c</columns>
        <columns>City__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PS-{000}</displayFormat>
        <label>Prior School Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prior Schools</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>