force-app/main/default/objects/Prior_School__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SchoolName__c</columns>
    <columns>SchoolType__c</columns>
    <columns>School_Year__c</columns>
    <columns>District__c</columns>
    <columns>City__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>